@@ -145,8 +145,7 @@ class ApiQueryExternalLinks extends ApiQueryBase {
 
 	public function getExamples() {
 		return array(
-			'Get a list of external links on the [[Main Page]]:',
-			'  api.php?action=query&prop=extlinks&titles=Main%20Page',
+			'api.php?action=query&prop=extlinks&titles=Main%20Page' => 'Get a list of external links on the [[Main Page]]',
 		);
 	}
 
